# areamedica-api

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  API_TESTING_REPORT.md  DEVELOPMENT_SUMMARY.md  ERD-Backend-API.md  KOYEB_DEPLOYMENT.md  Makefile  README.md  api_requests_responses.csv  docker-compose.yml  make.sh  pyproject.toml  render.yaml  ruff.toml
.github/workflows/: cd.yml  ci.yml
.koyeb/: koyeb.yaml
docker/: Dockerfile  Dockerfile.dev
docs/: API_DOCUMENTATION.md  ERD-Backend-API.md  HOSTING_ANALYSIS.md  api_requests_responses.csv
migrations/: env.py
migrations/versions/: 42be14e03be4_add_seed_data_for_testing.py  eceff2145126_initial_schema.py
monitoring/: grafana-dashboard.json  prometheus.yml
requirements/: base.txt  dev.txt  prod.txt
scripts/: check_deployment_readiness.sh  init-db.sql  start.sh
src/application/dto/: auth_dto.py  transaction_dto.py
src/application/services/: auth_service.py  rate_limit_service.py  transaction_service.py
src/application/validators/: __init__.py  input_validator.py
src/domain/entities/: permission.py  transaction.py  user.py
src/domain/repositories/: transaction_repository.py  user_repository.py
src/infrastructure/cache/: redis_cache.py
src/infrastructure/config/: settings.py
src/infrastructure/database/: __init__.py  connection.py
src/infrastructure/database/models/: __init__.py  base.py  rate_limit.py  transaction.py  user.py
src/infrastructure/database/repositories/: __init__.py  transaction_repository.py  user_repository.py
src/infrastructure/monitoring/: logging.py  metrics.py
src/interface/api/: exceptions.py  main.py
src/interface/api/middleware/: security_middleware.py
src/interface/api/routes/: __init__.py  auth.py  health.py  transactions.py
terraform/: README.md  cloud-init.yml  main.tf  monitoring-init.yml  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py
tests/e2e/: test_api_flows.py  test_transaction_workflow.py
tests/integration/: test_auth_endpoints.py  test_auth_integration.py.disabled  test_banesco_client.py  test_transaction_endpoints.py  test_transactions_integration.py.disabled
tests/unit/: test_auth_service.py  test_health.py  test_transaction_service.py  test_user_repository.py
